README: update info
 - remove patches that are upstreamed / unused
 - add note about non-RT vs. RT differences

Signed-off-by: Jordan Johnston <johnstonljordan@gmail.com>

--- a/README
+++ b/README
@@ -11,13 +11,10 @@ My patch list;
 
 * 10001-mm-Support-soft-dirty-flag-reset-for-VA-range.patch
 * 10002-mm-Support-soft-dirty-flag-read-with-reset.patch
-* 10020-mm-Lower-the-non-hugetlbpage-pageblock-size-to-reduc.patch
-* 10021-mm-Don-t-hog-the-CPU-and-zone-lock-in-rmqueue_bulk.patch
 * 10030-sched-fair-Compile-out-NUMA-code-entirely-when-NUMA-.patch
 * 10060-x86-Enable-fast-strings-on-Intel-if-BIOS-hasn-t-alre.patch
 * 10062-amd_pinctrl-IRQF_NO_THREAD.patch 
 * 10063-designware-i2c_IRQF_NO_THREAD.patch
-* 10064-hidraw-Replace_hidraw_device_table_rwsem.patch
 * 10065-background_reclaim_of_hugepages.patch
 * 10066-sched_rt-rr_timeslice_1_jiffy.patch
 
@@ -28,3 +25,6 @@ anyone is using these packages, you will have to generate your own config - as
 mine are 'make localmodconfig'd, as i use modprobed-db;
 
 https://wiki.archlinux.org/title/Modprobed-db
+
+NOTE2: there are minor differences between the nspa / nspa-rt packages, just due to 
+       some patches not being compatible with the PREEMPT_RT patchset.
